<?xml version="1.0"?>
<package format="2">
  <name>auv_pilot</name>
  <version>0.0.1</version>
  <description>The auv_pilot package</description>

  <maintainer email="morev@todo.todo">morev</maintainer>

  <license>MIT</license>


  <buildtool_depend>catkin</buildtool_depend>

  <depend>roscpp</depend>
  <depend>rospy</depend>
  <depend>std_msgs</depend>
  <depend>auv_common</depend>
  <depend>actionlib</depend>
  <depend>actionlib_msgs</depend>

  <build_depend>message_generation</build_depend>
  <exec_depend>message_runtime</exec_depend>

  <export>

  </export>
</package>
