<?xml version="1.0"?>
<package format="2">
  <name>auv_pilot</name>
  <version>0.0.1</version>
  <description>The auv_pilot package</description>

  <maintainer email="morev@todo.todo">morev</maintainer>

  <license>MIT</license>


  <buildtool_depend>catkin</buildtool_depend>

  <depend>roscpp</depend>
  <depend>rospy</depend>
  <depend>std_msgs</depend>
  <depend>std_srvs</depend>
  <depend>geometry_msgs</depend>
  <depend>actionlib</depend>
  <depend>actionlib_msgs</depend>

  <build_depend>message_generation</build_depend>
  <build_depend>auv_common</build_depend>

  <build_export_depend>auv_common</build_export_depend>

  <exec_depend>auv_common</exec_depend>
  <exec_depend>message_runtime</exec_depend>

  <export>

  </export>
</package>
